--- a/index.html
+++ b/index.html
@@ -1,1 +1,210 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="" />
+        <meta name="viewport" content="width=device-width, initial-scale=3.0" />
+        <title>Resume Template</title>
+    </head>
+    <style>
+        body {
+            font-family: 'calibri', sans-serif;
+            line-height: 2.0;
+            margin: 1;
+            padding: 10px;
+            color: #4b4e53;
+            background-color:#fff;
+            border: 1px solid #4b4e53;
+        }
+        h1 { font: 'Candara', sans-serif;      
+        }
+        h2 { font-family: 'Calibri', sans-serif;
+        }
+        .container {
+            max-width: 800px;
+            margin: 20px auto;
+            padding: 20px;
+            background: #fff;
+            border-radius: 8px;
+            border-color: #444;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+        h1 {font-variant: small-caps; 
+            font-size: 36px;
+            padding-block: 2px;
+        }
+        h2 {color:#555;
+            font-size: 16px;
+            font-variant: small-caps;
+        }
+        .header {text-align: center;
+        }
+        .header {
+            background-color: #4f666a;
+            color: #fff;
+        }
+        .header {
+            height: 1.5in;
+        }
+        .header {
+            padding-block: 10px;
+        }
+        .header h1 {
+            margin: 10px 0;
+        }
+        .contact {color: #fff;
+            font-size: 16px;
+            font-variant: small-caps;
+        }       
+        .contact a {
+            margin: 10px 0;
+            font-size: 16px;
+            font-variant: small-caps;
+        }
+        .contact a {
+            color: #fff;
+            text-decoration: none;
+        }
+        .section {
+            margin: 20px 0;
+        }
+        .section h2 {
+            margin-bottom: 10px;
+            border-bottom: 3px solid #4b4e53;
+            padding-bottom: 5px;
+            font-size: x-large;
+        }
+        .item {
+            margin-bottom: 16px;
+            font: 'Calibri', small-caps;
+        }
+        .item h3 {
+            margin: 0;
+            font-size: 18px;
+            color: #4b4e53;
+        }
+        .item p {
+            margin: 5px 0;
+            font-size: 14px;
+        }
+        .skills ul {
+            list-style: none;
+            padding: 0;
+        }
+        .skills ul li {
+            display: inline-block;
+            background-color: #4d4d5ce1;
+            color: #fff;
+            padding: 5px 10px;
+            margin: 5px 5px 5px 0;
+            border-radius: 4px;}
+    </style>
+<body>
+    <main class="container">
+        <section class="header">
+            <p class="name"><h1>Sarah Hill</h1></p>
+            <p class="contact">
+                Email:
+                <a href="mailto:sarah.hill0107@gmail.com"
+                    >sarah.hill0107@gmail.com</a
+                >
+                | Phone: (502) 876-3370 | LinkedIn:
+                <a href="#">www.linkedin.com/in/sarahl-hill</a>
+            </p>
+            </section>
+            <section class="section">
+                <h2>Summary</h2>
+                <p>
+                    Highly detail-oriented Health Information Management (HIM) professional with extensive experience in medical records management, Epic integrations and healthcare data integrity. Skilled in optimizing workflows, testing new Epic functions, and providing analytical insights to enhance HIM processes. Passionate about leveraging data analysis and programming skills to improve healthcare information systems.
+                </p>
+            </section>
+            <section class="section">
+                <h2>Work Experience</h2>
+                <div class="item">
+                    <h3>ROI Legal Disclosure Specialist- Baptist Health Systems</h3>
+                    <p>4/2019- Present</p>
+                    <ul>
+                        <li>Manage legal medical record requests, court orders, and subpoenas ensuring HIPAA compliance and efficient processing</li>
+                        <li>Collaborate with Risk Management to handle litigation cases, enhancing legal response efficiency.</li>
+                        <li>Lead initiatives to streamline workflows and enhance ROI processes.</li>
+                        <li>Provided workflow optimization input as part of the HIM Epic Immersion Project.</li>
+                        <li>Streamline medical record processing while ensuring HIPAA compliance, managing legal requests, subpoenas and court orders.</li>
+                        <li>Participated in pilot testing of new EPIC ROI billing functions, delivering detailed feedback and analysis to management.</li>
+                    </ul>
+                </div>
+                <div class="item">
+                    <h3>Internal Auditor - Agent Link</h3>
+                    <p>7/2017-4/2019</p>
+                    <ul>
+                        <li> Conducted audits for health insurance accounts, resolving disputes with insurers and agents.</li>
+                        <li>Prepared comprehensive reports on audit findings, enhancing recovery processes.</li>
+                        <li>Processed commision payments ensuring accuracy and timeliness.</li>
+                        <li>Facilitated insurance enrollment for diverse group sizes.</li>
+                        <li>Utilized Excel spreadsheets for data tracking, audit reporting, and trend analysis.</li>
+                    </ul>
+                </div>
+                <div class="item">
+                    <h3>Government Audit Disclosure Specialist - Baptist Health System</h3>
+                    <p>4/2016-7/2017</p>
+                    <ul>
+                        <li>Managed Compliance for RAC and DRG audits while maintaining HIPAA standards, streamlining disclosure processes or government healthcare records</li>
+                        <li>Coordinated multi-system medical record requests, ensuring accurate documentation and timely response to CGS and insurance audit requirements.</li>
+                        <li>Optimised electronic health information system integration, enhancing retrieval efficiency and audit response protocols.</li>
+                        <li>Led cross-departmental coordination for medical record disclosure.</li>
+                    </ul>
+                    </div>
+                    <div class="item">
+                        <h3>Radiology File Room Clerk- Baptist Health Louisville</h3>
+                        <p>8/2011 -4/2016</p>
+                        <ul>
+                            <li>Managed patient registration process, ensuring precise records for enhanced care delivery.</li>
+                            <li>Coordinated imaging prep, enhancing operational efficiency across facilities.</li>
+                            <li>Acted as EPIC system super use, facilitating smooth integration and user support.</li>
+                            <li>Bridged communication between radiologists and healthcare teams, optimizing diagnostic reporting timeliness and patient care coordination.</li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+            <div class="section">
+                <h2>Education</h2>
+                <div class="item">
+                    <h3>Data Analysis with Python & SQL Pathway - Code Louisville</h3>
+                    <p>In Progress</p>
+                </div>
+                <div class="item">
+                    <h3>Social and Behaivoral Science Certification - Jefferson Community and Technical College</h3>
+                    <p>2013</p>
+                </div> 
+            </section>
+            <section class="section">
+                <h2>Skills</h2>
+                <div class="skills">
+                    <ul>
+                        <li>Healthcare IT Systems: EPIC, Onbase, Allscripts, Meditech, Athena, eClinicalWorks</li>
+                        <li>EPIC Integrations: Experience in multiple hospital and clinic EHR implementations, pilot testing and workflow optimization.</li>
+                        <li>Data Analysis: SQL, Python, Excel</li>
+                        <li>Project Involvement: HIM Epic Immersion Project, Epic Go Live (Super-User) and pilot testing.</li>
+                        <li>Regulatory Compliance: HIPAA, HITECH, ROI Processing, Legal medical record review.</li>
+                    </ul>
+                </div>
+            
+            </section>
+            <section class="section">
+                <h2>Projects</h2>
+                <div class="item">
+                    <h3>Project Name</h3>
+                    <p>
+                        Brief description of the project, the technologies used,
+                        and your role in the project.
+                    </p>
+                </div>
+                <div class="item">
+                    <h3>Project Name</h3>
+                    <p>
+                        Brief description of the project, the technologies used,
+                        and your role in the project.
+                    </p>
+                </div>
+            </section>
+        </main>
+    </body>
+</html>
