--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <h3>ROI Legal Disclosure Specialist- Baptist Health Systems</h3>
                     <p>4/2019- Present</p>
                     <ul>
-                        <li>Manage legal medical record requests, court orders, and subpoenas ensuring HIPAA compliance and efficient processing</li>
+                        <li>Manage legal medical record requests, court orders, and subpoenas ensuring HIPAA compliance and efficient processing.</li>
                         <li>Collaborate with Risk Management to handle litigation cases, enhancing legal response efficiency.</li>
                         <li>Lead initiatives to streamline workflows and enhance ROI processes.</li>
                         <li>Provided workflow optimization input as part of the HIM Epic Immersion Project.</li>
@@ -146,7 +146,7 @@
                     <h3>Government Audit Disclosure Specialist - Baptist Health System</h3>
                     <p>4/2016-7/2017</p>
                     <ul>
-                        <li>Managed Compliance for RAC and DRG audits while maintaining HIPAA standards, streamlining disclosure processes or government healthcare records</li>
+                        <li>Managed Compliance for RAC and DRG audits while maintaining HIPAA standards, streamlining disclosure processes or government healthcare records.</li>
                         <li>Coordinated multi-system medical record requests, ensuring accurate documentation and timely response to CGS and insurance audit requirements.</li>
                         <li>Optimised electronic health information system integration, enhancing retrieval efficiency and audit response protocols.</li>
                         <li>Led cross-departmental coordination for medical record disclosure.</li>
@@ -191,17 +191,8 @@
             <section class="section">
                 <h2>Projects</h2>
                 <div class="item">
-                    <h3>Project Name</h3>
+                    <h3></h3>
                     <p>
-                        Brief description of the project, the technologies used,
-                        and your role in the project.
-                    </p>
-                </div>
-                <div class="item">
-                    <h3>Project Name</h3>
-                    <p>
-                        Brief description of the project, the technologies used,
-                        and your role in the project.
                     </p>
                 </div>
             </section>
