--- a/index.html
+++ b/index.html
@@ -127,7 +127,6 @@
                         <li>Collaborate with Risk Management to handle litigation cases, enhancing legal response efficiency.</li>
                         <li>Lead initiatives to streamline workflows and enhance ROI processes.</li>
                         <li>Provided workflow optimization input as part of the HIM Epic Immersion Project.</li>
-                        <li>Streamline medical record processing while ensuring HIPAA compliance, managing legal requests, subpoenas and court orders.</li>
                         <li>Participated in pilot testing of new EPIC ROI billing functions, delivering detailed feedback and analysis to management.</li>
                     </ul>
                 </div>
@@ -135,7 +134,7 @@
                     <h3>Internal Auditor - Agent Link</h3>
                     <p>7/2017-4/2019</p>
                     <ul>
-                        <li> Conducted audits for health insurance accounts, resolving disputes with insurers and agents.</li>
+                        <li>Conducted audits for health insurance accounts, resolving disputes with insurers and agents.</li>
                         <li>Prepared comprehensive reports on audit findings, enhancing recovery processes.</li>
                         <li>Processed commision payments ensuring accuracy and timeliness.</li>
                         <li>Facilitated insurance enrollment for diverse group sizes.</li>
@@ -146,7 +145,7 @@
                     <h3>Government Audit Disclosure Specialist - Baptist Health System</h3>
                     <p>4/2016-7/2017</p>
                     <ul>
-                        <li>Managed Compliance for RAC and DRG audits while maintaining HIPAA standards, streamlining disclosure processes or government healthcare records.</li>
+                        <li>Processed for RAC and DRG audits while maintaining HIPAA standards, streamlining disclosure processes or government healthcare records.</li>
                         <li>Coordinated multi-system medical record requests, ensuring accurate documentation and timely response to CGS and insurance audit requirements.</li>
                         <li>Optimised electronic health information system integration, enhancing retrieval efficiency and audit response protocols.</li>
                         <li>Led cross-departmental coordination for medical record disclosure.</li>
@@ -156,9 +155,9 @@
                         <h3>Radiology File Room Clerk- Baptist Health Louisville</h3>
                         <p>8/2011 -4/2016</p>
                         <ul>
-                            <li>Managed patient registration process, ensuring precise records for enhanced care delivery.</li>
+                            <li>Managed patient check-in and registration process, ensuring precise records for enhanced care delivery.</li>
                             <li>Coordinated imaging prep, enhancing operational efficiency across facilities.</li>
-                            <li>Acted as EPIC system super use, facilitating smooth integration and user support.</li>
+                            <li>Acted as EPIC system super user, facilitating smooth integration and user support.</li>
                             <li>Bridged communication between radiologists and healthcare teams, optimizing diagnostic reporting timeliness and patient care coordination.</li>
                         </ul>
                     </div>
