--- a/index.html
+++ b/index.html
@@ -13,11 +13,7 @@
             padding: 10px;
             color: #4b4e53;
             background-color:#fff;
-            border: 1px solid #4b4e53;
-        }
-        h1 { font: 'Candara', sans-serif;      
-        }
-        h2 { font-family: 'Calibri', sans-serif;
+            border: 1px solid #4b4e53
         }
         .container {
             max-width: 800px;
@@ -28,7 +24,8 @@
             border-color: #444;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
-        h1 {font-variant: small-caps; 
+        h1 {font: 'Candara', sans-serif;      
+            font-variant: small-caps; 
             font-size: 36px;
             padding-block: 2px;
         }
@@ -36,17 +33,12 @@
             font-size: 16px;
             font-variant: small-caps;
         }
-        .header {text-align: center;
-        }
-        .header {
-            background-color: #4f666a;
-            color: #fff;
-        }
         .header {
             height: 1.5in;
-        }
-        .header {
             padding-block: 10px;
+            text-align: center;
+            background-color: #4f666a;
+            color: #fff;
         }
         .header h1 {
             margin: 10px 0;
@@ -59,8 +51,6 @@
             margin: 10px 0;
             font-size: 16px;
             font-variant: small-caps;
-        }
-        .contact a {
             color: #fff;
             text-decoration: none;
         }
@@ -142,7 +132,7 @@
                     </ul>
                 </div>
                 <div class="item">
-                    <h3>Government Audit Disclosure Specialist - Baptist Health System</h3>
+                    <h3>Government Audit ROI Specialist - Baptist Health System</h3>
                     <p>4/2016-7/2017</p>
                     <ul>
                         <li>Processed for RAC and DRG audits while maintaining HIPAA standards, streamlining disclosure processes or government healthcare records.</li>
