--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="" />
         <meta name="viewport" content="width=device-width, initial-scale=3.0" />
         <title>Resume Template</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     </head>
     <style>
         body {
@@ -103,13 +104,13 @@
         <section class="header">
             <p class="name"><h1>Sarah Hill</h1></p>
             <p class="contact">
-                Email:
+                <a href="mailto:example@example.com">
+                    <i class="fas fa-envelope"></i>  Email:
                 <a href="mailto:sarah.hill0107@gmail.com"
-                    >sarah.hill0107@gmail.com</a
-                >
-                | Phone: (502) 876-3370 | LinkedIn:
-                <a href="#">www.linkedin.com/in/sarahl-hill</a>
-            </p>
+                    >sarah.hill0107@gmail.com</a>
+                | <i class="fas fa-phone"></i>  Phone: (502) 876-3370 | <a href="https://www.linkedin.com/in/your-profile" target="_blank">
+                    <i class="fab fa-linkedin"></i>  LinkedIn:
+                <a href="#">www.linkedin.com/in/sarahl-hill</a></p>
             </section>
             <section class="section">
                 <h2>Summary</h2>
