corrected typo in Resume

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <section class="section">
                 <h2>Work Experience</h2>
                 <div class="item">
-                    <h3>ROI Legal Disclosure Specialist- Baptist Health Systems</h3>
+                    <h3>ROI Legal Disclosure Specialist- Baptist Health System</h3>
                     <p>4/2019- Present</p>
                     <ul>
                         <li>Manage legal medical record requests, court orders, and subpoenas ensuring HIPAA compliance and efficient processing.</li>
